--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.27.5",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "laravel-mix": "^6.0.29",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.39.0",
